role changes, token